# Harness_Project

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.ko.md  README.md
crates/: AGENTS.md
crates/harness-cli/: Cargo.toml
crates/harness-core/: Cargo.toml
crates/harness-core/src/: lib.rs  methods.rs  pipeline.rs
crates/harness-core/src/methods/: close_task.rs  intake.rs  judgment.rs  mod.rs  prepare_write.rs  record_run.rs  stage_artifact.rs  status.rs  tests.rs  update_scope.rs
crates/harness-core/src/policy/: access.rs  close_readiness.rs  judgment_relevance.rs  write_authorization.rs
crates/harness-mcp/: Cargo.toml
crates/harness-mcp/src/: lib.rs
crates/harness-mcp/tests/: binary_transport.rs
crates/harness-store/: Cargo.toml
crates/harness-store/src/: agent_integrations.rs  artifacts.rs  bootstrap.rs  core_pipeline.rs  error.rs  inspection.rs  lib.rs  migrations.rs  runtime_home.rs  sqlite.rs
crates/harness-store/tests/: storage_ddl_contract.rs
crates/harness-test-support/: Cargo.toml
crates/harness-types/: Cargo.toml
crates/volicord-cli/: Cargo.toml
docs/: 00-introduction.md  00-overview.md  01-project-charter.md  02-strategy.md  03-architecture.md  03-kernel-spec.md  04-runtime-architecture.md  05-mcp-api-and-schemas.md  05-user-guide.md  06-reference-mvp.md  07-document-projection.md  08-design-quality-policy-pack.md  09-agent-integration.md  09-design-quality-playbooks.md  10-user-guide.md  11-operations-and-conformance.md  99-authoring-guide.md  AGENTS.md  README.md  REWRITE-MANIFEST.md  doc-index.yaml  glossary.md  terminology-map.yaml
docs/appendix/: A-template-library.md  B-surface-cookbook.md  C-later-roadmap.md  D-migration-notes.md
docs/conformance/: conformance-fixtures.yaml  conformance-tests.md
docs/contracts/: artifact-contract.md  mcp-api.schema.json  projection-contract.md  state-machine.yaml  state-schema.sql  validator-spec.md
docs/en/: 00-introduction.md  01-project-charter.md  02-strategy.md  03-kernel-spec.md  04-runtime-architecture.md  05-mcp-api-and-schemas.md  06-reference-mvp.md  07-document-projection.md  08-design-quality-policy-pack.md  09-agent-integration.md  10-user-guide.md  11-operations-and-conformance.md  (+5 more)
xtask/: Cargo.toml
(+508 files in other folders)
