[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
harness-store = { path = "../harness-store" }
harness-types = { path = "../harness-types" }
serde_json = "1"

[dev-dependencies]
harness-test-support = { path = "../harness-test-support" }

[lib]
path = "src/lib.rs"
