[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
harness-store = { path = "../harness-store" }
harness-types = { path = "../harness-types" }
serde = "1"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
harness-test-support = { path = "../harness-test-support" }
rusqlite = { version = "0.32", features = ["bundled"] }

[lib]
path = "src/lib.rs"
