[package]
name = "harness-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
harness-core = { path = "../harness-core" }
harness-store = { path = "../harness-store" }
harness-types = { path = "../harness-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
harness-test-support = { path = "../harness-test-support" }

[lib]
path = "src/lib.rs"
